- adding mqtt handlers for publishing deleteacl and updateacl events - creating http endpoints for delete and update acl - adding an encodeRFID function to match how they are formatted on the rfid device
