# api/routes.go
@@ -217,6 +217,42 @@ func registerRoutes(r *mux.Router, api API) *mux.Router {
 	//     Responses:
 	//       200: addMulitpleMembersToResourceResponse
 	rr.HandleFunc("/resource/member/bulk", api.resource.addMultipleMembersToResource).Methods(http.MethodPost)
+	// swagger:route DELETE /api/resource/deleteacls resource resourceDeleteACLS
+	//
+	// Clears out all Resource ACLs on those devices
+	//
+	//     Consumes:
+	//     - application/json
+	//
+	//     Produces:
+	//     - application/json
+	//
+	//     Schemes: http
+	//
+	//     Security:
+	//     - bearerAuth:
+	//
+	//     Responses:
+	//       200: endpointSuccessResponse
+	rr.HandleFunc("/resource/deleteacls", api.resource.deleteResourceACL).Methods(http.MethodDelete)
+	// swagger:route GET /api/resource/updateacls resource resourceUpdateACLS
+	//
+	// Attempts to send all members to a Resource
+	//
+	//     Consumes:
+	//     - application/json
+	//
+	//     Produces:
+	//     - application/json
+	//
+	//     Schemes: http
+	//
+	//     Security:
+	//     - bearerAuth:
+	//
+	//     Responses:
+	//       200: endpointSuccessResponse
+	rr.HandleFunc("/resource/updateacls", api.resource.updateResourceACL).Methods(http.MethodGet)
 	// swagger:route DELETE /api/resource/member resource resourceRemoveMemberRequest
 	//
 	// Removes a member from a resource.
